<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lfr.registro.Agregar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/Mat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/M"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/Nom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/N"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/Eda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/E"
                    android:textSize="20dp" />

                <Spinner
                    android:id="@+id/mate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/Eva"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Eva"
                    android:textSize="20dp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <RadioButton
                        android:id="@+id/r1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="RadioButton" />

                    <RadioButton
                        android:id="@+id/r2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="RadioButton" />
                </RadioGroup>

                <Button
                    android:id="@+id/Guar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/G"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/Ver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/que"
                    android:textSize="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/Busca"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/B"
                        android:textSize="20dp" />

                    <Button
                        android:id="@+id/Elim"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Elim"
                        android:textSize="20dp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/Muestra"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:editable="false"
                    android:textSize="20dp" />

                <Button
                    android:id="@+id/Verto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/V"
                    android:textSize="20dp" />
            </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
